fixing footer on mobile view.

--- a/Capstone2/assets/styles/galleryTest.css
+++ b/Capstone2/assets/styles/galleryTest.css
@@ -220,36 +220,42 @@ h1{
   
 }
 
-.siteFooterBar {
+ 
+  .siteFooterBar {
     position: relative;
-    bottom: 0;
+    
     padding-top: 0px;
-    width: 100%;
-    box-shadow: 0px 0px 25px rgb(207, 207, 207);
-    height: 78px;
-    color: white;
-    background: black;
+    
     overflow:hidden;
+    min-width: 100%;
+    box-shadow: 0px 0px 25px rgb(207, 207, 207);
+    height: 88px;
+    color: #9B9B9B;
+    background: #F3F3F3;
+    background-color:black;
+    margin-top:250px;
 }
 
 .content {
     display: block;
     padding: 10px;
-    text-align: left;
+    text-align: center;
     font: 25px Georgia, "Times New Roman", Times, serif;
     font-size: 14px;
-    width:250px;
 }
 .foot {
  display:inline;
-    line-height: 70px;
+    line-height: 100px;
+    color:white;
 }
 .content img {
  height:70px;
     width: 70px;
     float:left;
-}
+  margin-left:10px;
 
+}
+  
   
 
 iframe {
@@ -276,4 +282,9 @@ iframe {
 text-align:center;
 margin-right:auto;
 margin-left:auto;
+}
+
+
+.bgroup{
+text-align:center;
 }
